--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "counter",
   "version": "0.1.0",
-  "homepage": "https://github.com/123-SHIVA/react-counter.git",
+  "homepage": "https://123-SHIVA.github.io/react-counter",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
